--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemailer": "^6.7.4"
-  },
-  "devDependencies": {
+    "nodemailer": "^6.7.4",
     "nodemon": "^2.0.16"
   }
 }
